--- a/julia/problem_001.ipynb
+++ b/julia/problem_001.ipynb
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5bb6cf2c",
+   "id": "7266698d",
    "metadata": {},
    "outputs": [
     {
@@ -24,8 +24,17 @@
     }
    ],
    "source": [
-    "using BenchmarkTools\n",
     "println(\"Julia v\", VERSION)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5bb6cf2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
    ]
   },
   {
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8d1372fa",
    "metadata": {},
    "outputs": [
@@ -46,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  5.826 μs (21 allocations: 20.03 KiB)\n"
+      "  5.931 μs (21 allocations: 20.03 KiB)\n"
      ]
     },
     {
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "725c3404",
    "metadata": {},
    "outputs": [
@@ -81,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  628.409 ns (0 allocations: 0 bytes)\n"
+      "  640.467 ns (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -108,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1e5a8101",
    "metadata": {},
    "outputs": [
@@ -116,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.496 μs (6 allocations: 11.75 KiB)\n"
+      "  1.542 μs (6 allocations: 11.75 KiB)\n"
      ]
     },
     {
@@ -143,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "426f1bb3",
    "metadata": {},
    "outputs": [
@@ -151,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  669.304 ns (0 allocations: 0 bytes)\n"
+      "  682.190 ns (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -178,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d8e497fa",
    "metadata": {},
    "outputs": [
@@ -186,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  628.924 ns (0 allocations: 0 bytes)\n"
+      "  640.964 ns (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -221,13 +230,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "066e6afa",
    "metadata": {},
    "outputs": [],
    "source": [
     "include(\"./euler.jl\")\n",
-    "b = @benchmark sum(n for n in 3:999 if n%3 == 0 || n%5 == 0) samples=5\n",
+    "b = @benchmark sum(n for n in 3:999 if n%3 == 0 || n%5 == 0)\n",
     "euler.save_benchmark(1, b);"
    ]
   }
