--- a/python/problem_001.ipynb
+++ b/python/problem_001.ipynb
@@ -12,6 +12,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "228ce1fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.11.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "python --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "619e624f",
    "metadata": {},
    "outputs": [],
@@ -21,31 +40,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "320004e9",
+   "id": "63677405",
    "metadata": {},
    "source": [
-    "#### Solution 1 (function)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "9ddd8fcc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def multiples(n=1000):\n",
-    "    s = 0\n",
-    "    for i in range(1, n):\n",
-    "        if (i%3 == 0) or (i%5 == 0):\n",
-    "            s += i\n",
-    "    return s"
+    "### Solution 1 (union)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eaf60461",
+   "id": "1821c250",
    "metadata": {},
    "outputs": [
     {
@@ -60,40 +64,42 @@
     }
    ],
    "source": [
-    "multiples()"
+    "# answer\n",
+    "sum(set(range(3, 1000, 3)).union(set(range(5, 1000, 5))))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d5fbbc6e",
+   "id": "64484a18",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50.1 μs ± 3.84 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "12.7 μs ± 151 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o multiples()\n",
-    "euler.save_benchmark(1, t)"
+    "# benchmark\n",
+    "b = %timeit -o sum(set(range(3, 1000, 3)).union(set(range(5, 1000, 5))))\n",
+    "euler.save_benchmark(1, b)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f79377c2",
+   "id": "c0ee02ea",
    "metadata": {},
    "source": [
-    "#### Solution 2 (oneliner)"
+    "### Solution 2 (list comprehension)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ea9a7c99",
+   "id": "758aae29",
    "metadata": {},
    "outputs": [
     {
@@ -108,40 +114,42 @@
     }
    ],
    "source": [
-    "sum([i for i in range(1000) if (i%3 == 0) or (i%5 == 0)])"
+    "# answer\n",
+    "sum(i for i in range(3, 1000) if i%3 == 0 or i%5 == 0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "87b48ae7",
+   "id": "844f3d10",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "49 μs ± 1.08 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "46.3 μs ± 150 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o sum([i for i in range(1000) if (i%3 == 0) or (i%5 == 0)])\n",
-    "euler.save_benchmark(1, t)"
+    "# benchmark\n",
+    "b = %timeit -o sum(i for i in range(1000) if i%3 == 0 or i%5 == 0)\n",
+    "euler.save_benchmark(1, b)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "77db6c57",
+   "id": "6a3568e3",
    "metadata": {},
    "source": [
-    "#### Solution 3 (union)"
+    "### Solution 3 (conditional sum)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "47dceda5",
+   "id": "00800dc2",
    "metadata": {},
    "outputs": [
     {
@@ -156,26 +164,85 @@
     }
    ],
    "source": [
-    "sum(set(range(0, 1000, 3)).union(set(range(0, 1000, 5))))"
+    "# answer\n",
+    "sum(filter(lambda x: x%3 == 0 or x%5 == 0, range(3, 1000)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6c4767ad",
+   "id": "b31d0592",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.6 μs ± 343 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "62.2 μs ± 1.3 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o sum(set(range(0, 1000, 3)).union(set(range(0, 1000, 5))))\n",
-    "euler.save_benchmark(1, t)"
+    "# benchmark\n",
+    "b = %timeit -o sum(filter(lambda x: x%3 == 0 or x%5 == 0, range(3, 1000)))\n",
+    "euler.save_benchmark(1, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a00dcf6",
+   "metadata": {},
+   "source": [
+    "### Solution 4 (function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "82d7a314",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "233168"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "def f():\n",
+    "    s = 0\n",
+    "    for i in range(3, 1000):\n",
+    "        if i%3 == 0 or i%5 == 0:\n",
+    "            s += i\n",
+    "    return s\n",
+    "\n",
+    "f()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "21d61a11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45 μs ± 1.16 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "b = %timeit -o f()\n",
+    "euler.save_benchmark(1, b)"
    ]
   }
  ],
