--- a/julia/problem_002.ipynb
+++ b/julia/problem_002.ipynb
@@ -12,12 +12,29 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "d69b0517",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(\"Julia v\", VERSION)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "8bb33459",
    "metadata": {},
    "outputs": [],
    "source": [
-    "using BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "using BenchmarkTools"
    ]
   },
   {
@@ -25,41 +42,22 @@
    "id": "3c9f1c3e",
    "metadata": {},
    "source": [
-    "#### Solution 1 (build full sequence)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "7d2ebc28",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "fibonacci (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function fibonacci(n)\n",
-    "    fibonacci_sequence = [1, 2]\n",
-    "    while sum(fibonacci_sequence[end-1:end]) < n\n",
-    "        push!(fibonacci_sequence, sum(fibonacci_sequence[end-1:end]))\n",
-    "    end\n",
-    "    return fibonacci_sequence\n",
-    "end"
+    "### Solution 1 (full fibonacci sequence, conditional sum)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "05a30c38",
+   "id": "7d2ebc28",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1.062 μs (129 allocations: 5.72 KiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -71,46 +69,15 @@
     }
    ],
    "source": [
-    "sum(filter(iseven, fibonacci(4_000_000)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "dba9ce86",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 10000 samples with 10 evaluations.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m1.092 μs\u001b[22m\u001b[39m … \u001b[35m398.637 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m 0.00% … 98.80%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m1.192 μs               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m1.463 μs\u001b[22m\u001b[39m ± \u001b[32m  8.040 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m14.15% ±  2.61%\n",
-       "\n",
-       "  \u001b[39m \u001b[39m▅\u001b[39m█\u001b[39m▁\u001b[39m▂\u001b[39m \u001b[39m \u001b[34m \u001b[39m\u001b[39m \u001b[39m \u001b[39m▄\u001b[39m▁\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[39m▃\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▄\u001b[34m▃\u001b[39m\u001b[39m▃\u001b[39m▆\u001b[39m█\u001b[39m█\u001b[39m▅\u001b[39m▄\u001b[39m▃\u001b[39m▄\u001b[39m▄\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[32m▁\u001b[39m\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m \u001b[39m▂\n",
-       "  1.09 μs\u001b[90m         Histogram: frequency by time\u001b[39m           2 μs \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m5.72 KiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m129\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark sum(filter(iseven, fibonacci(4_000_000)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "50909ea0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(2, b);"
+    "function fibonacci(n)\n",
+    "    fib_seq = [1, 2]\n",
+    "    while sum(fib_seq[end-1:end]) < n\n",
+    "        push!(fib_seq, sum(fib_seq[end-1:end]))\n",
+    "    end\n",
+    "    return fib_seq\n",
+    "end\n",
+    "\n",
+    "@btime sum(filter(iseven, fibonacci(4_000_000)))"
    ]
   },
   {
@@ -118,46 +85,22 @@
    "id": "84912ae6",
    "metadata": {},
    "source": [
-    "#### Solution 2 (keep previous two)"
+    "### Solution 2 (keep previous two, sum even)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e49959b6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "fibonacci (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function fibonacci(n)\n",
-    "    previous_two = [1, 2]\n",
-    "    counter = previous_two[end]\n",
-    "    while sum(previous_two) < n\n",
-    "        push!(previous_two, sum(previous_two))\n",
-    "        popfirst!(previous_two)\n",
-    "        if iseven(previous_two[end])\n",
-    "            counter += previous_two[end]\n",
-    "        end\n",
-    "    end\n",
-    "    return counter\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "49cdadc2",
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  150.252 ns (3 allocations: 176 bytes)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -169,52 +112,46 @@
     }
    ],
    "source": [
-    "fibonacci(4_000_000)"
+    "function sum_even_fib(n)\n",
+    "    fib_seq = [1, 2]\n",
+    "    fib_sum = fib_seq[end]\n",
+    "    while sum(fib_seq) < n\n",
+    "        push!(fib_seq, sum(fib_seq))\n",
+    "        popfirst!(fib_seq)\n",
+    "        if iseven(fib_seq[end])\n",
+    "            fib_sum += fib_seq[end]\n",
+    "        end\n",
+    "    end\n",
+    "    return fib_sum\n",
+    "end\n",
+    "\n",
+    "@btime sum_even_fib(4_000_000)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "4b0199f0",
+   "cell_type": "markdown",
+   "id": "4457ab35",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 10000 samples with 815 evaluations.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m153.169 ns\u001b[22m\u001b[39m … \u001b[35m 20.527 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m173.466 ns               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m195.346 ns\u001b[22m\u001b[39m ± \u001b[32m314.317 ns\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m4.25% ± 5.54%\n",
-       "\n",
-       "  \u001b[39m \u001b[39m▂\u001b[39m \u001b[39m \u001b[39m▇\u001b[34m█\u001b[39m\u001b[39m \u001b[39m▂\u001b[39m▁\u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[39m▇\u001b[39m█\u001b[39m▅\u001b[39m▃\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m▆\u001b[39m█\u001b[39m█\u001b[39m▄\u001b[39m▃\u001b[32m▃\u001b[39m\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m \u001b[39m▃\n",
-       "  153 ns\u001b[90m           Histogram: frequency by time\u001b[39m          396 ns \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m176 bytes\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m3\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "b = @benchmark fibonacci(4_000_000)"
+    "### Save best performance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0e7d3aff",
+   "execution_count": 5,
+   "id": "baf79c30",
    "metadata": {},
    "outputs": [],
    "source": [
+    "include(\"./euler.jl\");\n",
+    "b = @benchmark sum_even_fib(4_000_000)\n",
     "euler.save_benchmark(2, b);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -222,7 +159,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
