--- a/python/problem_002.ipynb
+++ b/python/problem_002.ipynb
@@ -12,6 +12,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "78536188",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "9d520d08",
    "metadata": {},
    "outputs": [],
@@ -24,30 +42,13 @@
    "id": "123e83b0",
    "metadata": {},
    "source": [
-    "#### Solution 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "85bacd8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fibonacci(n=4_000_000):\n",
-    "    fib = [1, 2]\n",
-    "    s = fib[-1]\n",
-    "    while sum(fib[-2:]) < n:\n",
-    "        fib.append(sum(fib[-2:]))\n",
-    "        if fib[-1]%2 == 0:\n",
-    "            s += fib[-1]\n",
-    "    return s"
+    "### Solution 1 (full fibonacci sequence, conditional sum)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2c58e650",
+   "id": "8ce31b20",
    "metadata": {},
    "outputs": [
     {
@@ -62,62 +63,46 @@
     }
    ],
    "source": [
-    "fibonacci()"
+    "def fibonacci(n):\n",
+    "    fib_seq = [1, 2]\n",
+    "    while sum(fib_seq[-2:]) <= n:\n",
+    "        fib_seq.append(sum(fib_seq[-2:]))\n",
+    "    return fib_seq\n",
+    "\n",
+    "sum(f for f in fibonacci(4_000_000) if f%2 == 0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "537d6654",
+   "id": "3738ff3b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.94 μs ± 151 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "6.67 μs ± 457 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o fibonacci()\n",
-    "euler.save_benchmark(2, t)"
+    "b = %timeit -o sum(f for f in fibonacci(4_000_000) if f%2 == 0)\n",
+    "euler.save_benchmark(2, b)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fd65f0fa",
+   "id": "33f5f05c",
    "metadata": {},
    "source": [
-    "#### Solution 2"
+    "### Solution 2 (keep previous two, sum even)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "900aece2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fibonacci(n=4_000_000):\n",
-    "    \n",
-    "    fib = [1, 2]\n",
-    "    s = fib[-1]\n",
-    "    while sum(fib[-2:]) < n:\n",
-    "        fib.append(sum(fib[-2:]))\n",
-    "\n",
-    "    s = 0\n",
-    "    for i in fib:\n",
-    "        if i%2 == 0:\n",
-    "            s += i\n",
-    "\n",
-    "    return s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "a6e33a27",
+   "id": "85bacd8b",
    "metadata": {},
    "outputs": [
     {
@@ -126,32 +111,42 @@
        "4613732"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fibonacci()"
+    "def sum_even_fib(n):\n",
+    "    fib_seq = [1, 2]\n",
+    "    fib_sum = fib_seq[-1]\n",
+    "    while sum(fib_seq[-2:]) < n:\n",
+    "        fib_seq.append(sum(fib_seq[-2:]))\n",
+    "        del fib_seq[0]\n",
+    "        if fib_seq[-1]%2 == 0:\n",
+    "            fib_sum += fib_seq[-1]\n",
+    "    return fib_sum\n",
+    "\n",
+    "sum_even_fib(4_000_000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5f18005e",
+   "execution_count": 6,
+   "id": "2c58e650",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.88 μs ± 166 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "7.48 μs ± 281 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o fibonacci()\n",
-    "euler.save_benchmark(2, t)"
+    "b = %timeit -o sum_even_fib(4_000_000)\n",
+    "euler.save_benchmark(2, b)"
    ]
   }
  ],
