--- a/python/problem_003.ipynb
+++ b/python/problem_003.ipynb
@@ -12,16 +12,93 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6ee77be3",
+   "id": "4a05ecfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "6ee77be3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy\n",
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce2da826",
+   "metadata": {},
+   "source": [
+    "### Solution 1 (sympy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0d93ff13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6857"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "max(sympy.primefactors(600851475143))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "eea63904",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37.1 μs ± 773 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "b = %timeit -o max(sympy.primefactors(600851475143))\n",
+    "euler.save_benchmark(3, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02909f54",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (sieve of eratosthenes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [],
@@ -43,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "02c9b941",
    "metadata": {},
    "outputs": [],
@@ -61,17 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9d585b52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert prime_factorization(13195) == [5, 7, 13, 29]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "7d2ebc28",
    "metadata": {},
    "outputs": [
@@ -81,18 +148,19 @@
        "6857"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# answer\n",
     "max(prime_factorization(600851475143))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "98c18397",
    "metadata": {},
    "outputs": [
@@ -100,23 +168,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.55 ms ± 12.6 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "1.39 ms ± 5.76 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o max(prime_factorization(600851475143))\n",
-    "euler.save_benchmark(3, t)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d89e8e7",
-   "metadata": {},
-   "source": [
-    "Sources:\n",
-    "- Prime Generator: https://code.activestate.com/recipes/117119\n",
-    "- Prime Factorization: https://www.cuemath.com/numbers/prime-factorization  "
+    "# benchmark\n",
+    "b = %timeit -o max(prime_factorization(600851475143))\n",
+    "euler.save_benchmark(3, b)"
    ]
   }
  ],
@@ -136,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
