--- a/python/problem_004.ipynb
+++ b/python/problem_004.ipynb
@@ -5,13 +5,31 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 4\n",
+    "# Problem 4\n",
     "https://projecteuler.net/problem=4"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "5891be24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "0fcdc37f",
    "metadata": {},
    "outputs": [],
@@ -20,38 +38,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "81c2912c",
+   "cell_type": "markdown",
+   "id": "9e370dc7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def largest_palindrome_product(digits):\n",
-    "    low = 10**(digits-1)\n",
-    "    high = (10**digits)-1\n",
-    "    r = range(low, high+1)\n",
-    "    palindrome_products = []\n",
-    "    for n in r:\n",
-    "        for m in r:\n",
-    "            if str(n*m) == str(n*m)[::-1]:\n",
-    "                palindrome_products.append(n*m)\n",
-    "    return max(palindrome_products)"
+    "### Solution 1 (list)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9d585b52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert largest_palindrome_product(digits=2) == 9009"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "23233c14",
+   "id": "cd0ba455",
    "metadata": {},
    "outputs": [
     {
@@ -60,32 +57,106 @@
        "906609"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "largest_palindrome_product(digits=3)"
+    "# answer\n",
+    "def largest_palindrome_product(digits):\n",
+    "    lo, hi = 10**(digits-1), (10**digits)-1\n",
+    "    r = range(lo, hi+1)\n",
+    "    palindrome_products = []\n",
+    "    for n in r:\n",
+    "        for m in r:\n",
+    "            p = n*m # product\n",
+    "            if str(p) == str(p)[::-1]:\n",
+    "                palindrome_products.append(p)\n",
+    "    return max(palindrome_products)\n",
+    "\n",
+    "largest_palindrome_product(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7d2ebc28",
+   "execution_count": 4,
+   "id": "c01d745f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "143 ms ± 1.22 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "138 ms ± 5.32 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o largest_palindrome_product(digits=3)\n",
-    "euler.save_benchmark(4, t)"
+    "# benchmark\n",
+    "b = %timeit -o largest_palindrome_product(3)\n",
+    "euler.save_benchmark(4, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3981c44",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (no list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7fcca0bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "906609"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "def largest_palindrome_product(digits):\n",
+    "    lo, hi = 10**(digits-1), (10**digits)-1\n",
+    "    r = range(lo, hi+1)\n",
+    "    lpp = 0 # largest palindrome product\n",
+    "    for n in r:\n",
+    "        for m in r:\n",
+    "            p = n*m # product\n",
+    "            if str(p) == str(p)[::-1] and p > lpp:\n",
+    "                lpp = p\n",
+    "    return lpp\n",
+    "\n",
+    "largest_palindrome_product(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "34e30dde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "134 ms ± 5.38 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "b = %timeit -o largest_palindrome_product(3)\n",
+    "euler.save_benchmark(4, b)"
    ]
   }
  ],
@@ -105,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
