--- a/julia/problem_003.ipynb
+++ b/julia/problem_003.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 3\n",
+    "# Problem 3\n",
     "https://projecteuler.net/problem=3"
    ]
   },
