--- a/python/problem_002.ipynb
+++ b/python/problem_002.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 2\n",
+    "# Problem 2\n",
     "https://projecteuler.net/problem=2"
    ]
   },
@@ -63,6 +63,7 @@
     }
    ],
    "source": [
+    "# answer\n",
     "def fibonacci(n):\n",
     "    fib_seq = [1, 2]\n",
     "    while sum(fib_seq[-2:]) <= n:\n",
@@ -87,6 +88,7 @@
     }
    ],
    "source": [
+    "# benchmark\n",
     "b = %timeit -o sum(f for f in fibonacci(4_000_000) if f%2 == 0)\n",
     "euler.save_benchmark(2, b)"
    ]
@@ -117,6 +119,7 @@
     }
    ],
    "source": [
+    "# answer\n",
     "def sum_even_fib(n):\n",
     "    fib_seq = [1, 2]\n",
     "    fib_sum = fib_seq[-1]\n",
@@ -145,6 +148,7 @@
     }
    ],
    "source": [
+    "# benchmark\n",
     "b = %timeit -o sum_even_fib(4_000_000)\n",
     "euler.save_benchmark(2, b)"
    ]
@@ -166,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
